# cmyk2rgb

./: .gitignore  README.md  pyproject.toml
cmyk2rgb/: cli.py  converter.py
docs/: sonoff.md
gray_fox/: intents.json  lambda_function.py
myColorSkill/: intents.json  lambda_function.py  sample_utterances
